--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "ioredis": "^5.3.1",
     "ms": "^2.1.3",
     "nestjs-pino": "^3.1.1",
+    "redis": "^4.7.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
@@ -69,6 +70,7 @@
   },
   "devDependencies": {
     "@golevelup/ts-jest": "^0.3.4",
+    "@jest/types": "^29.6.3",
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
