--- a/.env
+++ b/.env
@@ -8,5 +8,6 @@ INTEGRATION_LIMIT=5
 # Infra
 # REDIS_HOST=redis # Container name will be the host
 REDIS_PORT=6379
+# REDIS_TLS=true
 
 LOCALHOST_HTTPS=true
